cloud/nikamma/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ytfactory-web
spec:
  type: ClusterIP
  selector: {app: ytfactory-web}
  ports: [{name: http, port: 8080, targetPort: http}]
---
apiVersion: v1
kind: Service
metadata:
  name: ytfactory-api
spec:
  type: ClusterIP
  selector: {app: ytfactory-api}
  ports: [{name: http, port: 8080, targetPort: http}]
