cloud/nikamma/manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ytfactory-public-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`ytfactory.nikamma.in`)
      priority: 1000
      services: [{name: ytfactory-web, port: 8080}]
  tls: {certResolver: cloudflare}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ytfactory-internal-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`ytfactory.nikamma.in`)
      priority: 1000
      services: [{name: ytfactory-web, port: 8080}]
  tls: {certResolver: cloudflare}
